# caseva

./: .gitignore  README.md  pyproject.toml  setup.py
caseva/: common.py  optimizer.py  utils.py
caseva/distributions/: genextreme.py  genpareto.py
caseva/models/: __init__.py  base.py  block_maxima.py  point_process.py  threshold_excess.py
data/: dowjones.csv  engine.csv  glass.csv
notebooks/: 01_tutorial.ipynb  02_wind_storm_application.ipynb  03_automated_threshold_selection.ipynb  pyproject.toml  tutorial.ipynb
scripts/: analysis.py
test/: test_block_maxima.py  test_threshold_excess.py
